feat: Add team feedback sidebar with Netlify Blobs - Add FeedbackSidebar component with star ratings and comments - Add Netlify Function for feedback CRUD API - Update homepage layout with sidebar design - Configure Netlify Blobs for serverless data storage

--- a/web-app/package.json
+++ b/web-app/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@netlify/blobs": "^10.6.0",
+    "@netlify/functions": "^5.1.2",
     "@types/file-saver": "^2.0.7",
     "docxtemplater": "^3.67.6",
     "file-saver": "^2.0.5",
